# workout-planner-rust

./: Cargo.toml  README.md  exercises.json  workoutplans.json  workouts.json
src/: handlers.rs  main.rs  models.rs  routes.rs
src/exercises/: handlers.rs  models.rs  routes.rs
src/workoutplans/: handlers.rs  models.rs  routes.rs
src/workouts/: handlers.rs  models.rs  routes.rs
