[package]
name = "workout-planner-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = [ "v4", "fast-rng", "macro-diagnostics" ]}
warp = "0.3.6"
